--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,13 +5,13 @@ html lang="pt"
     meta name="keywords" content=""
     meta name="description" content=""
 
-    title
-      = page_title(app_name: 'example')
+    - default_title
+    title = page_title
 
     link href="/favicon.ico" rel=("shortcut icon")
 
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true
+    = javascript_include_tag 'application', 'data-turbolinks-track': true
     = csrf_meta_tags
 
     /![if lt IE 9]
