chore(theme): Apply theme
Apply basic layout, header and footer.

Also:

- Add favicon file
- Add brand logo css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,13 @@
 @import 'base/base';
 @import 'neat';
 @import 'materialize';
+@import 'theme/overrides/brand_logo';
+@import 'theme/custom';
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import 'https://fonts.googleapis.com/css?family=Lobster+Two:700i';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:700';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+@import 'https://fonts.googleapis.com/css?family=Roboto';
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
