refactor(layout): Fix main html's structure
Replace `div` by `main` element.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,7 @@ html lang="pt"
   body class="grey darken-4 #{body_class}"
     = render 'header'
     = render 'flash_messages'
-    .section.main.no-pad-bot
+    main.no-pad-bot
       .container
         = yield
     = render 'footer'
