refactor(javascripts): Add content for `:main_bottom_scripts`
In order to append Scripts at the bottom of the page.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,3 +25,4 @@ html lang="pt"
         = yield
     = render 'footer'
     = javascript_include_tag 'application-bottom', 'data-turbolinks-track': 'reload'
+    = yield :main_bottom_scripts
