--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,22 @@
+// -- Plugins --
 @import 'normalize-rails';
 @import 'bourbon';
 @import 'base/base';
 @import 'neat';
 @import 'materialize';
-@import 'theme/overrides/brand_logo';
-@import 'theme/custom';
+
+// -- Fonts --
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import 'https://fonts.googleapis.com/css?family=Lobster+Two:700i';
 @import 'https://fonts.googleapis.com/css?family=Montserrat:700';
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 @import 'https://fonts.googleapis.com/css?family=Roboto';
+@import 'https://fonts.googleapis.com/css?family=Oswald';
+
+// -- Theme --
+@import 'theme/overrides/brand_logo';
+@import 'theme/custom';
+@import 'theme/utilities';
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
