--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,9 @@
 @import 'theme/custom';
 @import 'theme/utilities';
 
+// -- Application --
+@import 'users';
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
