feature(auth): Add user authentication
Add authentication via Auth0. More: http://auth0.com

Also, add auth0's gems, configuration, controller, coffee, helper and specs.

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -7,3 +7,14 @@ header
           small.beta beta
         .title
           = yield :main_title
+        ul#nav-mobile.right.hide-on-med-and-down
+          - if user_signed_in?
+            li
+              = link_to [:edit, current_user], class: 'profile' do
+                i.material-icons account_circle
+            li
+              = link_to destroy_session_path do
+                i.material-icons subdirectory_arrow_right
+          - else
+            li
+              a.auth0 Login
