feature(user): Profile complete verification
After the authentication, the system verifies if the user's profile
is completed. If not, the user is redirected to the edit page
in order to complete their profile.

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -8,4 +8,6 @@
     = f.input :bio, wrapper: :text_area, as: :text
 
   .form-actions
-    = f.submit
+    button.btn.light-blue.accent-3.waves-effect.waves-light type="submit"
+      = @user.profile_complete? ? t('helpers.submit.update_simple') : t('helpers.submit.finish')
+      i.material-icons.right done
