--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -13,7 +13,7 @@ header
               = link_to [:edit, current_user], class: 'profile' do
                 i.material-icons account_circle
             li
-              = link_to destroy_session_path do
+              = link_to destroy_session_path, class: 'logout' do
                 i.material-icons subdirectory_arrow_right
           - else
             li
