feature(search): Add user search
Enable authenticated users to search for other users.

closes #18

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 
 // -- Theme --
 @import 'theme/overrides/brand_logo';
+@import 'theme/overrides/search';
 @import 'theme/custom';
 @import 'theme/utilities';
 
