--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,8 +10,8 @@ html lang="pt"
 
     link href="/favicon.ico" rel=("shortcut icon")
 
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_include_tag 'application'
     = csrf_meta_tags
 
     /![if lt IE 9]
@@ -24,5 +24,5 @@ html lang="pt"
       .container
         = yield
     = render 'footer'
-    = javascript_include_tag 'application-bottom', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application-bottom'
     = yield :main_bottom_scripts
