feature(user): Add nickname

--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -7,6 +7,6 @@
         = link_to user.name, user, class: 'black-text'
       - if user.username
         small
-          = link_to user.username, user, class: 'grey-text darken-5'
+          = link_to user.nickname, user, class: 'grey-text darken-5'
       span.blue-grey-text.darken-4
         = user.bio
