feature(post): Add user posts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,8 @@
 
 // -- Application --
 @import 'users';
+@import 'posts';
+@import 'timeline';
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
