feature(post): Add link to authentication
When the user is not logged in, the new post button opens the authentication modal.

--- a/app/views/posts/_fab_add.html.slim
+++ b/app/views/posts/_fab_add.html.slim
@@ -1,5 +1,5 @@
 .fixed-action-btn style="bottom: 45px; right: 24px;"
-  a.btn-floating.btn-large.red
+  a.btn-floating.btn-large.red class="#{'auth0' unless user_signed_in?}"
     i.large.material-icons add_alert
   - if user_signed_in?
     ul
