chore(i18n): Add I18n-js gem
More: https://github.com/fnando/i18n-js

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,4 +25,5 @@ html lang="pt"
         = yield
     = render 'footer'
     = javascript_include_tag 'application-bottom'
+    = render 'layouts/i18n'
     = yield :main_bottom_scripts
