refactor(user): Change follow button

--- a/app/views/users/_follow_button.html.slim
+++ b/app/views/users/_follow_button.html.slim
@@ -1,2 +1,2 @@
 = link_to follow_path(@user), class: 'btn light-blue accent-3 waves-effect waves-light width-100-percent'
-  i.material-icons notifications
+  i.material-icons person_add
